Fixed spacing issues for mobile viewers Very close to MVP

--- a/css/index.css
+++ b/css/index.css
@@ -227,8 +227,19 @@ header nav a:last-child {
 .home .top-section {
   border-bottom: dashed 2px #C0C0C0;
 }
+@media (max-width:500px) {
+  .home .top-section .top-img {
+    width: 90%;
+    margin: 0 5%;
+  }
+}
 .home .top-section .text-content {
   margin: 2% 0;
+}
+@media (max-width:500px) {
+  .home .top-section .text-content {
+    padding: 2% 5%;
+  }
 }
 .home .content-section {
   margin: 30px 0;
@@ -249,6 +260,7 @@ header nav a:last-child {
 @media (max-width:500px) {
   .home .content-section .text-content {
     width: 100%;
+    padding: 0 5%;
   }
 }
 .home .content-section .img-content {
@@ -258,6 +270,7 @@ header nav a:last-child {
 @media (max-width:500px) {
   .home .content-section .img-content {
     width: 100%;
+    padding: 0 5%;
   }
 }
 .home .content-section .img-content img {
@@ -274,15 +287,26 @@ header nav a:last-child {
 @media (max-width:500px) {
   .home .inverse-content .text-content {
     order: -1;
+    padding: 0 5%;
   }
 }
 .home .inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
 }
+@media (max-width:500px) {
+  .home .inverse-content .img-content {
+    padding: 0 5%;
+  }
+}
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
+}
+@media (max-width:500px) {
+  .home .content-destination {
+    width: 90%;
+  }
 }
 .home .content-destination img {
   border-radius: 10px;
@@ -304,7 +328,9 @@ header nav a:last-child {
 }
 @media (max-width:500px) {
   .home .content-pick .destination {
-    width: 100%;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
   }
 }
 .home .btn {
@@ -319,5 +345,6 @@ header nav a:last-child {
 @media (max-width:500px) {
   .home .btn {
     background-color: #17A2B8;
+    margin: 0 auto;
   }
 }
